testsuite/vhdl/syntax/test_data/label_mismatch/009_mixed.expected
In 'label_mismatch/009_mixed':4:1: syntax error: Label mismatch in Entity Declaration
   4| entity testbench is
    |        ~~~~~~~~~ <<-- here
    | ...
   5| end entity test_bench; -- testbench vs. test_bench
    |            ~~~~~~~~~~ <<-- and here
In 'label_mismatch/009_mixed':5:24: syntax error: Label mismatch in Architecture Body
   7| architecture BENCH of testbench is
    |              ~~~~~ <<-- here
    | ...
  19| end architecture bench_test; -- BENCH vs. bench_test
    |                  ~~~~~~~~~~ <<-- and here
In 'label_mismatch/009_mixed':11:3: syntax error: Label mismatch in Process Statement
  11|   Stimuli: process
    |   ~~~~~~~ <<-- here
    | ...
  17| end process Stim; -- Stimuli vs. Stim
    |             ~~~~ <<-- and here
